# tools

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md
acal-converter/: README.md  pyproject.toml
acal-converter/docs/: policy-language-expressiveness.md
acal-converter/src/acal_converter/: __init__.py  cli.py
acal-converter/src/acal_converter/readers/: __init__.py  xacml.py  yacal.py
acal-converter/tests/: test_cli.py  test_converter.py
acal-converter/tests/fixtures/: ex01-simple-permit.json  ex01-simple-permit.yaml
acal-converter/tests/fixtures/alfa/: bag-attribute.alfa  malformed-syntax.alfa  unknown-function.alfa
acal-converter/tests/fixtures/xacml3/: combiner-parameters.xml  include-in-result.xml  simple-policy.xml  unknown-policy-child.xml
acal-core/: pyproject.toml
acal-core/capabilities/: README.md  alfa.yaml  cedar.yaml  xacml-2.0.yaml  xacml-3.0.yaml  xacml.yaml
acal-core/docs/: policy-language-expressiveness.md
acal-core/src/acal_core/: __init__.py  features.py  languages.py  report.py
acal-core/src/acal_core/readers/: __init__.py  _xacml_identifiers.py  alfa.py  cedar.py  jacal.py  xacml.py
acal-core/src/acal_core/writers/: __init__.py  jacal.py  yacal.py
acal-core/tests/: test_cedar_examples.py  test_core.py
acal-core/tests/fixtures/: ex02-condition.json  ex02-condition.yaml
acal-core/tests/fixtures/alfa/: acal-attributes.alfa  bag-comparison.alfa  condition.alfa  custom-combining-algo.alfa  date-comparison.alfa  obligation.alfa  ordered-deny-overrides.alfa  ordered-permit-overrides.alfa  shorthand-policy.alfa  simple-permit.alfa  unresolvable-attr.alfa  variable.alfa  xpath-datatype.alfa
acal-core/tests/fixtures/cedar/: attr-chain.cedar  conditional-nonbool.cedar  decimal-approximate.cedar  duplicate-id.cedar  entity-scope.cedar  expr-in-invalid-left.cedar  expr-in.cedar  expr-is-invalid-left.cedar  expr-is.cedar  expr-value-entity-literal.cedar  extra-annotation.cedar  forbid-overrides.cedar  invalid-id.cedar  ipaddr-unmapped.cedar  malformed.cedar  operators.cedar  scope-in-list.cedar  simple-permit.cedar  template-plus-static.cedar  template.cedar  typed-operators.cedar
acal-core/tests/fixtures/xacml2/: simple-policy.xml
acal-core/tests/fixtures/xacml3/: earliest-version.xml  latest-version.xml  policyset-with-reference.xml  request-attributes.xml  rule-combiner-parameters.xml  rule-target-and-condition.xml  rule-target.xml  unknown-expr-elem.xml  unknown-rule-child.xml  xpath-version.xml
acal-core/tests/fixtures/xacml4/: bundle.xml  nested-policy-reference.xml  notice-expression.xml  request.xml  response.xml  result-with-obligations.xml  simple-policy.xml  target-boolean-expr.xml
acal-explain/: README.md  pyproject.toml
acal-explain/src/acal_explain/: __init__.py  analyzer.py  cli.py  config.py  llm.py  output.py
acal-explain/tests/: test_analyzer.py  test_cli.py
jacal-validator/: pyproject.toml
jacal-validator/src/jacal_validator/: __main__.py  base.py  cli.py  config.py  constraints.py  output.py  schemas.py  validator.py
jacal-validator/tests/: conftest.py  test_fixtures.py  test_jacal_validator.py
jacal-validator/tests/fixtures/include/: ext-policy.json  ext-sharedvar.json
jacal-validator/tests/fixtures/incomplete/: inc01-policyreference-external-policy.json  inc02-sharedvariablereference-external.json
jacal-validator/tests/fixtures/invalid/: err01-unknown-toplevel-key.json  err02-missing-required-fields.json  err03-rule-with-target.json  err05-bundle-duplicate-policy-ids.json  err06-duplicate-rule-ids.json  err07-duplicate-shortid-names.json  err08-request-duplicate-entity-ids.json  err09-request-duplicate-attribute-ids.json  err10-duplicate-requestentityreference-ids.json  err11-requestentityreference-unresolved.json  err12-requestreference-duplicate-entity-id-set.json  err13-statusdetail-forbidden-for-ok.json  err14-statusdetail-forbidden-for-syntax-error.json  err15-statusdetail-forbidden-for-processing-error.json  err16-statusdetail-invalid-key-for-missing-attribute.json  err17-bundle-policyreference-without-policy.json  err18-bundle-duplicate-shortidset-ids.json  err19-bundle-duplicate-sharedvariable-ids.json  err20-policy-duplicate-parameter-names.json  err21-sharedvariable-duplicate-parameter-names.json  err22-policy-duplicate-variable-ids.json  err23-rule-duplicate-variable-ids.json  err24-shortidset-reference-cycle.json  err25-shortidset-reference-repeated-node.json  err26-sharedvariable-reference-cycle.json  err35-json-comment.json  (+10 more)
xacml-converter/: README.md  pyproject.toml  xacml-convert
xacml-converter/src/xacml_converter/: cli.py  converter.py
xacml-converter/tests/: test_converter.py
yacal-validator/: README.md  pyproject.toml
yacal-validator/src/yacal_validator/: __main__.py  base.py  cli.py  config.py  constraints.py  output.py  schemas.py  validator.py
yacal-validator/tests/: conftest.py  test_fixtures.py  test_yacal_validator.py
(+109 files in other folders)
