[project]
name = "acal-core"
version = "0.1.0"
description = "Core readers and writers for ACAL policy formats (XACML, YACAL, JACAL, ALFA)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "lark>=1.1",
    "ruamel.yaml>=0.18",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
