[project]
name = "acal-explain"
version = "0.1.0"
description = "Plain-English explanation and analysis of ACAL policy documents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "acal-core",
    "click>=8.1",
    "litellm>=1.40",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
acal-explain = "acal_explain.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
