[project]
name = "acal-explain"
version = "0.1.0"
description = "Plain-English explanation and analysis of ACAL policy documents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "acal-core",
    "click>=8.1",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
acal-explain = "acal_explain.cli:main"

[project.optional-dependencies]
# litellm is heavy (openai, tokenizers, tiktoken, aiohttp) and is only needed to make actual
# LLM calls. The code imports it lazily (try/except ImportError) and raises a clear install
# hint if a real call is attempted without it, mirroring the acal-core[cedar] pattern. Install
# `acal-explain[llm]` to run explanations against a live model; the test suite mocks it.
llm = ["litellm>=1.40"]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
