[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xacml-converter"
version = "0.1.0"
description = "Convert XACML 3.0 and 4.0 policies to YACAL v1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "ruamel.yaml>=0.18",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
validate = ["yacal-validator"]

[project.scripts]
xacml-convert = "xacml_converter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
