[project]
name = "yacal-validator"
version = "0.1.0"
description = "Validator for YACAL v1.0 (YAML) policy documents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "click>=8.1",
    "httpx>=0.25",
    "jsonschema[format-nongpl]>=4.21",
    "referencing>=0.35",
    "ruamel.yaml>=0.18",
]

[project.scripts]
yacal-validate = "yacal_validator.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yacal_validator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
